# CMakeList.txt : CMake project for graphics-programming, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("graphics-programming")

# Add source to this project's executable.
add_executable (graphics-programming "graphics-programming.cpp" "graphics-programming.h")


# TODO: Add tests and install targets if needed.
